feat: add mobile JWT auth to calendar integration   endpoints
  Support Bearer token authentication for mobile app access to:
  - GET /api/calendar/integrations
  - POST /api/calendar/integrations/[id]/sync
  - POST/PUT /api/calendar/integrations/[id]/events

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "newArchEnabled": false,
     "scheme": "beckycrm",
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/becky-logo-v4-512x512_@72ppi.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -47,7 +47,8 @@
     "owner": "epsommer",
     "plugins": [
       "expo-dev-client",
-      "expo-font"
+      "expo-font",
+      "expo-splash-screen"
     ]
   }
 }
