--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "expo-navigation-bar": "~4.0.9",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "jsonwebtoken": "^9.0.3",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-shadow-2": "^7.1.2",
     "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/react": "~18.3.12",
+    "dotenv": "^17.2.3",
     "prisma": "^6.17.1",
     "typescript": "~5.8.3"
   },
