feat: implement Phase 2 core parity features for mobile app
- Google Calendar integration with OAuth flow and bidirectional sync
- AI draft generation for messages with context analysis
- Batch operations for receipts/invoices/clients with selection mode
- Testimonial approval workflow with featured/visibility toggles
- Analytics dashboard with revenue, client, and activity metrics

--- a/app.json
+++ b/app.json
@@ -30,6 +30,7 @@
         "READ_CONTACTS",
         "READ_SMS",
         "READ_CALENDAR",
+        "WRITE_CALENDAR",
         "GET_ACCOUNTS",
         "WAKE_LOCK",
         "RECEIVE_BOOT_COMPLETED"
