--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
     "@types/react": "~18.3.12",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
+    "expo-auth-session": "^7.0.10",
     "expo-constants": "~17.0.8",
     "expo-contacts": "~14.0.5",
     "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-linking": "^8.0.11",
     "expo-navigation-bar": "~4.0.9",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "^15.0.10",
     "jsonwebtoken": "^9.0.3",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-shadow-2": "^7.1.2",
     "react-native-svg": "15.8.0"
