--- a/app.json
+++ b/app.json
@@ -49,7 +49,15 @@
     "plugins": [
       "expo-dev-client",
       "expo-font",
-      "expo-splash-screen"
+      "expo-splash-screen",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/becky-logo-v4-512x512_@72ppi.png",
+          "color": "#00B4D8",
+          "sounds": []
+        }
+      ]
     ]
   }
 }
