--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "expo-constants": "~17.0.8",
     "expo-contacts": "~14.0.5",
     "expo-dev-client": "~5.0.20",
+    "expo-device": "^8.0.10",
+    "expo-file-system": "^19.0.21",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "^8.0.11",
     "expo-navigation-bar": "~4.0.9",
+    "expo-notifications": "^0.32.15",
+    "expo-print": "^15.0.8",
+    "expo-sharing": "^14.0.8",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "^15.0.10",
