--- a/package.json
+++ b/package.json
@@ -20,22 +20,22 @@
     "@types/react": "~18.3.12",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
-    "expo-auth-session": "^7.0.10",
+    "expo-auth-session": "~6.0.3",
     "expo-constants": "~17.0.8",
     "expo-contacts": "~14.0.5",
     "expo-dev-client": "~5.0.20",
-    "expo-device": "^8.0.10",
-    "expo-file-system": "^19.0.21",
+    "expo-device": "~7.0.3",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
-    "expo-linking": "^8.0.11",
+    "expo-linking": "~7.0.5",
     "expo-navigation-bar": "~4.0.9",
-    "expo-notifications": "^0.32.15",
-    "expo-print": "^15.0.8",
-    "expo-sharing": "^14.0.8",
+    "expo-notifications": "~0.29.14",
+    "expo-print": "~14.0.3",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
-    "expo-web-browser": "^15.0.10",
+    "expo-web-browser": "~14.0.2",
     "jsonwebtoken": "^9.0.3",
     "react": "18.3.1",
     "react-native": "0.76.9",
