feat: implement calendar gesture system, bottom sheet, and confirmation modals
Add comprehensive gesture-based event creation for day/week/month views:
- PlaceholderContainer with animated drag-to-create visualization
- useDragToCreate hook with long-press trigger and pan gestures
- Haptic feedback for snap points and gesture completion
- 15-minute time slot snapping with visual feedback

Implement ActionBottomSheet with year calendar navigation:
- Three snap points (collapsed, half, full)
- YearCalendarMini with month selection and event density
- Quick actions and view toggle integration

Add recurring/multiday event confirmation modals:
- BaseConfirmationModal with radio option support
- EditRecurringEventModal for edit scope selection
- MultidayConflictModal for overlap warnings
- useRecurringEventActions and useMultidayEventActions hooks

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "^7.28.5",
     "@expo/vector-icons": "~14.0.4",
+    "@gorhom/bottom-sheet": "^5.2.8",
     "@nozbe/watermelondb": "^0.27.1",
     "@nozbe/with-observables": "^1.6.0",
     "@prisma/client": "6.17.1",
@@ -41,6 +42,8 @@
     "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-shadow-2": "^7.1.2",
     "react-native-svg": "15.8.0"
   },
